<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Xyrenn Hacking Toolkit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="dashboard">Dashboard</string>
    <string name="tools">Tools</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
</resources>